fix: long links in footnotes breaking the layout on small screen

--- a/src/assets/styles/layout/footnotes.css
+++ b/src/assets/styles/layout/footnotes.css
@@ -20,6 +20,10 @@
   position: relative;
 }
 
+.footnotes p a {
+  word-break: break-word;
+}
+
 .footnotes :target {
   background-color: var(--color-fg-feather);
   padding: var(--space-5);
